[package]
name = "hello_glium"
version = "0.0.1"
authors = [ "Gerlof Fokkema <gerlof.fokkema@gmail.com>" ]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
cgmath = "0.3.1"
regex = "*"
regex_macros = "*"
time = "*"

[dependencies.glium]
version = "0.9.1"
features = ["cgmath", "glutin", "image"]
